<!--
  ~ Copyright (C) 2017 Emmanuel Kehinde
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">TwittaSave</string>
    <string name="tweet_url">Tweet Link</string>
    <string name="download_video">Download Video/Gif</string>
    <string name="filename_optional">Filename (Optional)</string>
    <string name="tap_like">Kindly proceed to rate the app by tapping the \'LIKE\' Button.</string>
    <string name="hope_like">Hope you like it.</string>
    <string name="thank_you">Thank you for using TwittaSave</string>
    <string name="about_twittersave">About TwittaSave</string>
    <string name="about">TwittaSave helps you to download Videos and animated Gifs from Tweets to your device.</string>
    <string name="_1_copy_the_tweet_url_of_the_tweet_containing_the_video_or_animated_gif_then_paste_it_into_the_tweet_url_box_enter_the_name_you_want_it_stored_with_optional_then_tap_the_download_button_enjoy">Copy the link of the tweet containing the video or animated gif. Then paste it into the tweet link box. Enter the name you want it stored with (optional). Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="select_share_tweet_via_option_from_the_specific_tweet_options_then_select_twittersave_app_from_the_list_of_apps_the_tweet_url_is_automatically_inserted_into_the_tweet_url_box_enter_the_name_you_want_it_stored_with_optional_then_tap_the_download_button_enjoy">Select \'Share Tweet via…\' option from the (specific) tweet options. Then select TwittaSave app from the list of apps (The tweet link is automatically inserted into the tweet link box). Enter the name you want it stored with (optional). Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="emmanuel_kehinde">Emmanuel Kehinde</string>
    <string name="enable_disable_autolisten">Enable/Disable AutoListen</string>
    <string name="enable_autolisten_using_the_switch_below_the_download_button_from_the_twitter_app_simply_select_copy_link_to_tweet_option_from_the_tweet_containing_the_video_or_gif_twittasave_automatically_handles_the_download_of_the_video_or_animated_gif">Enable AutoListen using the Switch below the Download Button. From the Twitter app, simply select \'Copy link to tweet\' option from the tweet containing the video or gif. TwittaSave automatically handles the download of the video or animated gif.</string>
    <string name="general_channel">General Channel</string>
    <string name="twittasave_web">TwittaSave Web</string>
    <string name="change_theme">Change Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System Default</string>
    <string name="what_it_does">What it does?</string>
    <string name="how_to_use">How to use?</string>
    <string name="method_1">Method 1:</string>
    <string name="method_2">Method 2:</string>
    <string name="method_3">Method 3:</string>
    <string name="developed_by">Developed by:</string>
</resources>
